--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,9 @@
   <link rel="stylesheet/less" type="text/css" href="style.less">
   <script src="less.min.js" type="text/javascript"></script>
 </head>
-<div class="page__container">
-
-  <body class="page__body"><svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+  <body class="body">
+    <div class="body__container">
+      <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
       <symbol id="academy">
         <g>
           <path
@@ -99,7 +99,7 @@
     </svg>
     <header class="main-header">
       <div class="main-header__main-logo-container"><a class="main-header__main-logo">
-          <div class="main-header__main-logo-container"><svg width="200" height="96" alt="Логотип Sedona.">
+          <div class="main-header__main-logo-container"><svg width="200" height="96">
               <use href="#sedona"></use>
             </svg></div>
         </a>
@@ -108,9 +108,9 @@
                 class="visually-hidden">Открыть меню</span></button>
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--active"><a>Главная</a></li>
-              <li class="site-list__item"><a class="site-list__link" href="catalog.html" ;>Фото и видео</a></li>
-              <li class="site-list__item"><a class="site-list__link" href="form.html" ;>Форма отзыва</a></li>
-              <li class="site-list__item"><a class="site-list__link" href="https://htmlacademy.ru/study" ;>Html
+              <li class="site-list__item"><a class="site-list__link" href="catalog.html">Фото и видео</a></li>
+              <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+              <li class="site-list__item"><a class="site-list__link" href="https://htmlacademy.ru/study">Html
                   academy</a></li>
             </ul>
           </div>
@@ -130,8 +130,8 @@
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--blueback">
+        <div class="advantages__list">
+          <div class="advantages__item advantages__item--blueback">
             <div class="advantages__description-container">
               <h3 class="advantages__title">Настоящий городок</h3>
               <p class="advantages__description-number">— №1 —</p>
@@ -145,10 +145,10 @@
                   alt="Фото города.">
               </picture>
             </div>
-          </li>
+          </div>
           <div class="advantages__greyback-container">
-            <li class="advantages__item advantages__item-shop"><svg class="advantages__logo" width="39px" height="37px"
-                alt="Логтип дома.">
+            <div class="advantages__item advantages__item-shop">
+              <svg class="advantages__logo" width="39px" height="37px">
                 <use href="#house"></use>
               </svg>
               <div class="advantages__item-container">
@@ -157,9 +157,8 @@
                   <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </div>
               </div>
-            </li>
-            <li class="advantages__item advantages__item-shop"><svg class="advantages__logo" width="39px" height="37px"
-                alt="Логтип дома.">
+            </div>
+            <div class="advantages__item advantages__item-shop"><svg class="advantages__logo" width="39px" height="37px">
                 <use href="#burger"></use>
               </svg>
               <div class="advantages__item-container">
@@ -168,9 +167,8 @@
                   <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </div>
               </div>
-            </li>
-            <li class="advantages__item advantages__item-shop"><svg class="advantages__logo" width="39px" height="37px"
-                alt="Логтип дома.">
+            </div>
+            <div class="advantages__item advantages__item-shop"><svg class="advantages__logo" width="39px" height="37px">
                 <use href="#souvenier"></use>
               </svg>
               <div class="advantages__item-container">
@@ -179,9 +177,9 @@
                   <p class="advantages__description">Не только китайского, но и местного производства!</p>
                 </div>
               </div>
-            </li>
+            </div>
           </div>
-          <li class="advantages__item advantages__item--blueback">
+          <div class="advantages__item advantages__item--blueback">
             <div class="advantages__description-container">
               <h3 class="advantages__title">Там есть мост дьявола</h3>
               <p class="advantages__description-number">— №2 —</p>
@@ -195,61 +193,62 @@
                   alt="Фото моста.">
               </picture>
             </div>
-          </li>
+          </div>
           <div class="advantages__greyback-container">
-            <li class="advantages__item advantages__item--greyback">
+            <div class="advantages__item advantages__item--greyback">
               <h3 class="advantages__title">Небольшая площадь</h3>
               <p class="advantages__description-number">— №3 —</p>
               <p class="advantages__description">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="advantages__item advantages__item--greyback">
+            </div>
+            <div class="advantages__item advantages__item--greyback">
               <h3 class="advantages__title">Красивая дорога</h3>
               <p class="advantages__description-number">— №4 —</p>
               <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="advantages__item advantages__item--greyback">
+            </div>
+            <div class="advantages__item advantages__item--greyback">
               <h3 class="advantages__title">Мало туристов</h3>
               <p class="advantages__description-number">— №5 —</p>
               <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
+            </div>
           </div>
-        </ul>
+        </div>
       </section>
       <section class="outro">
         <h2 class="outro__title">Заинтересовались?</h2>
         <p class="outro__description">Укажите преполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
           Седоне</p><a class="button button--outro" href="https://clck.ru/Vmr3g">Найти гостиницу</a>
       </section>
-      <section class="map"><iframe
+      <section class="map">
+        <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1967219.8363975238!2d-112.44940083756063!3d35.92459829266354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1672092969156!5m2!1sru!2sru"
-          width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">alt="Седона на карте"</iframe></section>
+           height="350" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe></section>
     </main>
     <footer class="footer">
       <div class="footer__hashtag"><span>#visitsedona</span></div>
       <ul class="footer__social">
         <li class="footer__item"><a class="footer__link" href="https://vk.com/htmlacademy"><svg class="footer__icon"
-              width="48px" height="48px" alt="vkontakte.">
+              width="48px" height="48px">
               <use href="#vkontakte"></use>
             </svg> <span class="visually-hidden">vkontakte.</span></a></li>
         <li class="footer__item"><a class="footer__link" href="https://t.me/htmlacademy"><svg class="footer__icon"
-              width="48px" height="48px" alt="telegram.">
+              width="48px" height="48px">
               <use href="#telegram"></use>
             </svg> <span class="visually-hidden">telegram.</span></a></li>
         <li class="footer__item"><a class="footer__link" href="https://www.youtube.com/user/htmlacademyru"><svg
-              class="footer__icon" width="48px" height="48px" alt="youtube.">
+              class="footer__icon" width="48px" height="48px">
               <use href="#youtube"></use>
             </svg> <span class="visually-hidden">youtube.</span></a></li>
       </ul>
       <a class="footer__copyright" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
       <span class="footer__text">Разработано</span>
-      <svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
+      <svg class="footer__icon" width="27px" height="33px">
             <use href="#academy"></use>
           </svg>
         </a>
     </footer>
     <script src="js/script.js"></script>
+  </div>
   </body>
-</div>
 
 </html>
